<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">孝子</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">重复密码</string>
    <string name="to_login">立即登陆</string>
    <string name="to_reg">立即注册</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_regsiter">注册</string>
    <string name="title_m_activity_login">用户登陆</string>
    <string name="title_m_activity_regsiter">用户注册</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_appstart">appstart</string>
    <string name="username_is_not_empty">用户名不能为空</string>
    <string name="password_is_not_empty">密码不能为空</string>
    <string name="network_busy">网络繁忙，请稍后重试！</string>
    <string name="password_is_not_one">密码不一致，请重新输入！</string>
    <string name="activity_share_choose_share_wechat">微信</string>
    <string name="activity_share_choose_share_wechat_moments">朋友圈</string>
    <string name="activity_share_choose_share_weibo">新浪微博</string>
    <string name="copy_group_link">复制链接</string>
    <string name="change_passwd">修改密码</string>
    <string name="feedback_title">意见反馈</string>
    <string name="sex_title">修改性别</string>
    <string name="logout_account">退出登录</string>
    <string name="setting_changepassword">修改密码</string>
    <string name="setting_button">帮助</string>
    <string name="aboutapp">关于孝子</string>
    <string name="setting_check_update">检查更新</string>
    <string name="activity_setting_feedback">意见反馈</string>
    <string name="new_message_notify">消息通知</string>
    <string name="black_list_management">黑名单管理</string>
    <string name="nodata_show">抱歉，还没有数据哦~</string>
    <string name="no_network_show">抱歉，还没有连接网络哦~</string>
    <string name="friends_nearby">附近</string>
    <string name="friends_newuser">新人</string>
    <string name="friends_world">找人</string>
    <string name="friends_like">喜欢</string>
    <string name="image">图片</string>
    <string name="fri_mayknow">可能认识的人</string>
    <string name="group_chat_title_txt">群聊/群游戏</string>
    <string name="robot">机器人</string>
    <string name="search">搜索</string>
    <string name="setting_title">设置中心</string>
    <string name="helpcenter">帮助中心</string>
    <string name="edit_desc">编辑个人简介</string>
    <string name="edit_style">编辑个性签名</string>
    <string name="edit_live_location">请选择居住地址</string>
    <string name="edit_home_location">请选择家庭住址</string>
    <string name="edit_professor">请选择家庭住址</string>
    <string name="confirm">确定</string>
    <string name="profile_zone">个人资料</string>
    <string name="my_favtor">我的收藏</string>
    <string name="add_daily">再写一篇</string>
    <string name="my_diary">我的家庭日记</string>
    <string name="add_album">创建相册</string>
    <string name="my_album">我的相册</string>
    <string name="add_dairy_photo">添加图片</string>
    <string name="edit_dairy">编辑家庭日记</string>
    <string name="unlogin_msg">您还没有登陆，请先登录！</string>
    <string name="category_selected">请选择文章分类</string>
</resources>
