<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/cltxt_title_color_amend" android:gravity="center_vertical" android:id="@+id/tvShareInstruction" android:paddingLeft="18.0dip" android:layout_width="fill_parent" android:layout_height="65.0dip" android:layout_alignParentTop="true" style="@style/style_item_font_16" />
    <TableLayout android:id="@+id/table" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="*" android:layout_below="@id/tvShareInstruction">
        <TableRow>
            <TextView android:textColor="#ff6d6d6d" android:gravity="center_horizontal" android:id="@+id/share_wechat" android:background="@drawable/selector_bg_popupitem_groupchat_main" android:paddingTop="38.0dip" android:paddingBottom="19.0dip" android:text="@string/activity_share_choose_share_wechat" android:drawableTop="@drawable/ic_wechat" android:drawablePadding="7.0dip" style="@style/style_item_font_13" />
            <TextView android:textColor="#ff6d6d6d" android:gravity="center_horizontal" android:id="@+id/share_wechat_moments" android:background="@drawable/selector_bg_popupitem_groupchat_main" android:paddingTop="38.0dip" android:paddingBottom="19.0dip" android:text="@string/activity_share_choose_share_wechat_moments" android:drawableTop="@drawable/ic_wechat_moments" android:drawablePadding="7.0dip" style="@style/style_item_font_13" />
            <TextView android:textColor="#ff6d6d6d" android:gravity="center_horizontal" android:id="@+id/share_weibo" android:background="@drawable/selector_bg_popupitem_groupchat_main" android:paddingTop="38.0dip" android:paddingBottom="19.0dip" android:text="@string/activity_share_choose_share_weibo" android:drawableTop="@drawable/ic_sinaweibo" android:drawablePadding="7.0dip" style="@style/style_item_font_13" />
        </TableRow>
        <TableRow>
            <TextView android:textColor="#ff6d6d6d" android:gravity="center_horizontal" android:id="@+id/share_qq" android:background="@drawable/selector_bg_popupitem_groupchat_main" android:paddingTop="19.0dip" android:paddingBottom="38.0dip" android:text="QQ" android:drawableTop="@drawable/ic_qq" android:drawablePadding="7.0dip" style="@style/style_item_font_13" />
            <TextView android:textColor="#ff6d6d6d" android:gravity="center_horizontal" android:id="@+id/share_copy_link" android:background="@drawable/selector_bg_popupitem_groupchat_main" android:paddingTop="19.0dip" android:paddingBottom="38.0dip" android:text="@string/copy_group_link" android:drawableTop="@drawable/ic_copy_link" android:drawablePadding="7.0dip" style="@style/style_item_font_13" />
            <TextView android:id="@+id/share_empty_right" />
        </TableRow>
    </TableLayout>
</RelativeLayout>